--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,13 +1,33 @@
-html {
-  --theme-red: #ff2636;
-}
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#menu-bar {
+main {
+  padding: 30px 7.5vw 50px;
+}
+@media screen and (max-width: 1600px) {
+  main {
+    padding-left: 64px;
+    padding-right: 64px;
+  }
+}
+
+h1 {
+  margin: 50px 0 30px;
+  font-weight: 500;
+  color: #2f2f2f;
+}
+h1:first-child {
+  margin-top: 0;
+}
+
+#top-bar {
+  position: sticky;
+  top: 0;
+}
+
+#top-bar #menu-bar {
   display: flex;
   justify-content: center;
   padding: 10px 0;
@@ -16,29 +36,36 @@ body {
   color: #fff;
 }
 
-#menu-bar span:not(:last-child) {
+#top-bar #menu-bar span:not(:last-child) {
   margin-right: 3vw;
 }
 
-#title-bar {
+#top-bar #title-bar {
   display: flex;
   height: 45px;
   padding: 10px 7.5vw;
+  background-color: #fff;
   box-shadow: 0 10px 15px -11px #aaa;
 }
+@media screen and (max-width: 1600px) {
+  #top-bar #title-bar {
+    padding-left: 64px;
+    padding-right: 64px;
+  }
+}
 
-#title-bar #carousell-logo {
+#top-bar #title-bar #carousell-logo {
   height: calc(100% - 12px);
   margin-top: 6px;
   margin-right: 30px;
 }
 
-#title-bar #search-form {
+#top-bar #title-bar #search-form {
   /* width: 100%; */
   flex-grow: 1;
 }
 
-#title-bar #search-form #search-bar {
+#top-bar #title-bar #search-form #search-bar {
   width: calc(100% - 88px); /* on smaller screens, this should expand to fill all the space it can */
   height: 100%;
   padding: 0 14px;
@@ -49,38 +76,37 @@ body {
   font-size: 16px;
 }
 
-#user-actions {
+#top-bar #title-bar #user-actions {
   display: flex;
   margin-right: 20px;
   color: #606060;
 }
 
-#user-actions > * {
+#top-bar #title-bar #user-actions > * {
   margin: auto 0;
 }
 
-#user-actions #profile-picture {
+#top-bar #title-bar #user-actions .profile-picture {
   height: 75%;
   margin-right: 9px;
-  border-radius: 50%;
 }
 
-#user-actions #user-greeting {
+#top-bar #title-bar #user-actions #user-greeting {
   flex-shrink: 0;
   margin-right: 2px;
 }
 
-#user-actions #user-greeting #username {
+#top-bar #title-bar #user-actions #user-greeting #username {
   font-weight: bold;
 }
 
-#sell-button-wrapper {
+#top-bar #title-bar #sell-button-wrapper {
   display: flex;
   align-items: center;
 }
 
-#title-bar #sell-button-wrapper #sell-button {
-  padding: 4px 25px;
+#top-bar #title-bar #sell-button-wrapper #sell-button {
+  padding: 5px 25px;
   background-color: var(--theme-red);
   color: #fff;
   border: none;
@@ -88,4 +114,176 @@ body {
   font-family: inherit;
   font-size: 16px;
   font-weight: 500;
+}
+
+#explore-categories {
+  display: flex;
+  padding: 20px 30px;
+  border-radius: 10px;
+  overflow-x: scroll;
+}
+
+#explore-categories .explore-category {
+  width: 100px;
+}
+
+#explore-categories .explore-category:not(:last-child) {
+  margin-right: 40px;
+}
+
+#explore-categories .explore-category > * {
+  display: block;
+}
+
+#explore-categories .explore-category img {
+  width: 100px;
+  margin-bottom: 5px;
+}
+
+#explore-categories .explore-category span {
+  color: #555;
+  text-align: center;
+  font-size: 14px;
+}
+
+#daily-recommendations {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+#daily-recommendations .listing {
+  padding: 15px;
+  grid-column: auto / auto;
+  grid-row: auto / auto;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: box-shadow 0.2s;
+}
+#daily-recommendations .listing:hover {
+  box-shadow: 0 0 5px 0 #aaa;
+}
+
+#daily-recommendations .listing .listing-info-top *,
+#daily-recommendations .listing .listing-info-bottom * {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+#daily-recommendations .listing .listing-info-top {
+  display: flex;
+  height: 35px;
+  margin-bottom: 15px;
+}
+
+#daily-recommendations .listing .listing-info-top .listing-info-top-text {
+  width: calc(100% - 35px);
+  margin: auto 0;
+  transform: translateY(-2px);
+}
+
+#daily-recommendations .listing .listing-info-top .listing-info-top-text .seller-username {
+  margin-bottom: 1px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+#daily-recommendations .listing .listing-info-top .listing-info-top-text .listing-age {
+  font-size: 12px;
+  color: #666;
+}
+
+#daily-recommendations .listing .listing-info-top .profile-picture {
+  height: 100%;
+  margin-right: 10px;
+}
+
+#daily-recommendations .listing .item-image-wrapper {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  margin-bottom: 10px;
+}
+#daily-recommendations .listing .item-image-wrapper::before {
+  content: "";
+  display: block;
+  margin-top: 100%;
+}
+
+#daily-recommendations .listing .item-image-wrapper .item-image {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+#daily-recommendations .listing .listing-info-bottom {
+  margin-bottom: 10px;
+}
+
+#daily-recommendations .listing .listing-info-bottom .item-name {
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-weight: 500;
+}
+
+#daily-recommendations .listing .item-price {
+  margin-bottom: 4px;
+}
+
+#daily-recommendations .listing .listing-info-bottom .item-description,
+#daily-recommendations .listing .listing-info-bottom .item-condition {
+  line-height: 22px;
+  font-size: 14px;
+  color: #666;
+}
+
+#daily-recommendations .listing .listing-action-buttons {
+  display: flex;
+}
+
+#daily-recommendations .listing .listing-action-buttons > * {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+#daily-recommendations .listing .listing-action-buttons .like-button,
+#daily-recommendations .listing .listing-action-buttons .report-button {
+  /* width: 35px;
+  height: 35px; */
+  padding: 0;
+  background-color: #00000000;
+  border: none;
+  border-radius: 50%;
+  font-size: 20px;
+}
+
+#daily-recommendations .listing .listing-action-buttons .like-button {
+  margin-left: -2px;
+  margin-right: 4px;
+}
+
+#daily-recommendations .listing .listing-action-buttons .report-button {
+  margin-right: -2px;
+}
+
+#daily-recommendations .listing .listing-action-buttons .start-chat {
+  margin-left: auto;
+  margin-right: 10px;
+  padding: 7px 10px;
+  background-color: var(--theme-red);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-family: inherit;
+  font-weight: 600;
 }
