--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -12,6 +12,18 @@ main {
     padding-right: 64px;
   }
 }
+@media screen and (max-width: 700px) {
+  main {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media screen and (max-width: 430px) {
+  main {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
 
 h1 {
   margin: 50px 0 30px;
@@ -21,10 +33,16 @@ h1 {
 h1:first-child {
   margin-top: 0;
 }
+@media screen and (max-width: 430px) {
+  h1 {
+    font-size: 28px;
+  }
+}
 
 #top-bar {
   position: sticky;
   top: 0;
+  z-index: 999999999;
 }
 
 #top-bar #menu-bar {
@@ -34,6 +52,11 @@ h1:first-child {
   z-index: 2;
   background-color: var(--theme-red);
   color: #fff;
+}
+@media screen and (max-width: 950px) {
+  #top-bar #menu-bar {
+    display: none;
+  }
 }
 
 #top-bar #menu-bar span:not(:last-child) {
@@ -53,16 +76,47 @@ h1:first-child {
     padding-right: 64px;
   }
 }
+@media screen and (max-width: 700px) {
+  #top-bar #title-bar {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media screen and (max-width: 430px) {
+  #top-bar #title-bar {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
 
-#top-bar #title-bar #carousell-logo {
+#top-bar #title-bar #carousell-logo,
+#top-bar #title-bar #carousell-logo-mobile {
   height: calc(100% - 12px);
   margin-top: 6px;
-  margin-right: 30px;
+}
+
+#top-bar #title-bar #carousell-logo-mobile {
+  display: none;
+}
+
+@media screen and (max-width: 950px) {
+  #top-bar #title-bar #carousell-logo {
+    display: none;
+  }
+
+  #top-bar #title-bar #carousell-logo-mobile {
+    display: block;
+  }
 }
 
 #top-bar #title-bar #search-form {
-  /* width: 100%; */
   flex-grow: 1;
+  margin-left: 30px;
+}
+@media screen and (max-width: 950px) {
+  #top-bar #title-bar #search-form {
+    margin-left: 20px;
+  }
 }
 
 #top-bar #title-bar #search-form #search-bar {
@@ -75,10 +129,14 @@ h1:first-child {
   font-family: inherit;
   font-size: 16px;
 }
+@media screen and (max-width: 950px) {
+  #top-bar #title-bar #search-form #search-bar {
+    width: calc(100% - 50px);
+  }
+}
 
 #top-bar #title-bar #user-actions {
   display: flex;
-  margin-right: 20px;
   color: #606060;
 }
 
@@ -90,10 +148,31 @@ h1:first-child {
   height: 75%;
   margin-right: 9px;
 }
+@media screen and (max-width: 840px) {
+  #top-bar #title-bar #user-actions .profile-picture {
+    margin-right: 3px;
+  }
+}
+@media screen and (max-width: 500px) {
+  #top-bar #title-bar #user-actions .profile-picture {
+    margin-right: 0;
+  } 
+}
 
 #top-bar #title-bar #user-actions #user-greeting {
   flex-shrink: 0;
   margin-right: 2px;
+}
+@media screen and (max-width: 840px) {
+  #top-bar #title-bar #user-actions #user-greeting {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #top-bar #title-bar #user-actions .material-icons {
+    display: none;
+  } 
 }
 
 #top-bar #title-bar #user-actions #user-greeting #username {
@@ -106,6 +185,7 @@ h1:first-child {
 }
 
 #top-bar #title-bar #sell-button-wrapper #sell-button {
+  margin-left: 20px;
   padding: 5px 25px;
   background-color: var(--theme-red);
   color: #fff;
@@ -114,6 +194,16 @@ h1:first-child {
   font-family: inherit;
   font-size: 16px;
   font-weight: 500;
+}
+@media screen and (max-width: 840px) {
+  #top-bar #title-bar #sell-button-wrapper #sell-button {
+    margin-left: 15px;
+  }
+}
+@media screen and (max-width: 500px) {
+  #top-bar #title-bar #sell-button-wrapper #sell-button {
+    display: none;
+  }
 }
 
 #explore-categories {
@@ -149,8 +239,29 @@ h1:first-child {
 #daily-recommendations {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  row-gap: 10px;
   padding: 10px;
   border-radius: 10px;
+}
+@media screen and (max-width: 1600px) {
+  #daily-recommendations {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+@media screen and (max-width: 1200px) {
+  #daily-recommendations {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media screen and (max-width: 900px) {
+  #daily-recommendations {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width: 430px) {
+  #daily-recommendations {
+    grid-template-columns: 1fr;
+  }
 }
 
 #daily-recommendations .listing {
@@ -180,7 +291,7 @@ h1:first-child {
 }
 
 #daily-recommendations .listing .listing-info-top .listing-info-top-text {
-  width: calc(100% - 35px);
+  width: calc(100% - 45px);
   margin: auto 0;
   transform: translateY(-2px);
 }
@@ -259,8 +370,6 @@ h1:first-child {
 
 #daily-recommendations .listing .listing-action-buttons .like-button,
 #daily-recommendations .listing .listing-action-buttons .report-button {
-  /* width: 35px;
-  height: 35px; */
   padding: 0;
   background-color: #00000000;
   border: none;
@@ -288,11 +397,20 @@ h1:first-child {
 #daily-recommendations .listing .listing-action-buttons .start-chat {
   margin-left: auto;
   margin-right: 10px;
-  padding: 7px 10px;
+  padding: 5px 10px;
   background-color: var(--theme-red);
   color: #fff;
   border: none;
   border-radius: 5px;
   font-family: inherit;
+  font-size: 14px;
   font-weight: 600;
+}
+#daily-recommendations .listing .listing-action-buttons .start-chat::before {
+  content: "Start chat";
+}
+@media screen and (min-width: 431px) and (max-width: 480px) {
+  #daily-recommendations .listing .listing-action-buttons .start-chat::before {
+    content: "Chat";
+  }
 }
