--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -2,6 +2,44 @@ html {
   --theme-red: #ff2636;
 }
 
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+main {
+  padding: 30px 7.5vw 50px;
+}
+@media screen and (max-width: 1600px) {
+  main {
+    padding-left: 64px;
+    padding-right: 64px;
+  }
+}
+@media screen and (max-width: 700px) {
+  main {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media screen and (max-width: 430px) {
+  main {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
+
+h1 {
+  margin: 50px 0 30px;
+  font-weight: 500;
+  color: #2f2f2f;
+}
+@media screen and (max-width: 430px) {
+  h1 {
+    font-size: 28px;
+  }
+}
+
 .card {
   box-shadow: 0 0 10px 0 #aaa;
 }
