--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -55,24 +55,24 @@ main > h1:first-child {
 
 .full-width-listings-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
   row-gap: 10px;
   padding: 10px;
   border-radius: 10px;
 }
 @media screen and (max-width: 1600px) {
   .full-width-listings-container {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 @media screen and (max-width: 1200px) {
   .full-width-listings-container {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 @media screen and (max-width: 900px) {
   .full-width-listings-container {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 @media screen and (max-width: 430px) {
