--- a/public/styles/top-bar.css
+++ b/public/styles/top-bar.css
@@ -4,10 +4,6 @@
   z-index: 999999999;
 }
 
-#top-bar .profile-picture {
-  height: 34px !important;
-}
-
 #top-bar #menu-bar {
   display: flex;
   justify-content: center;
@@ -121,7 +117,7 @@
 }
 
 #top-bar #title-bar #user-actions .profile-picture {
-  height: 75%;
+  height: 33px;
   margin-right: 9px;
 }
 @media screen and (max-width: 840px) {
