--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -96,12 +96,66 @@
   transform: translateY(-1px);
 }
 
+#filters #category-filter .filter-options #category-search-results {
+  grid-column: 1 / -1;
+  border-radius: 0 0 7px 7px;
+  overflow: hidden;
+}
+
+#filters #category-filter .filter-options #category-search-results #no-category-search-results {
+  display: none;
+  padding: 11px 13px 12px;
+}
+
+#filters #category-filter .filter-options #category-search-results .category-search-result {
+  position: relative;
+  padding: 11px 13px 12px;
+  cursor: pointer;
+}
+#filters #category-filter .filter-options #category-search-results .category-search-result:hover {
+  background-color: #d6d6d6;
+}
+
+#filters #category-filter .filter-options #category-search-results .category-search-result .result-name {
+  display: block;
+  margin-bottom: 1px;
+  color: #000;
+  font-weight: 500;
+  text-decoration: none;
+}
+#filters #category-filter .filter-options #category-search-results .category-search-result .result-name:hover {
+  text-decoration: underline;
+}
+
+#filters #category-filter .filter-options #category-search-results .category-search-result .result-parent-category {
+  color: #444;
+  font-size: 14px;
+}
+
+#filters #category-filter .filter-options #category-search-results .category-search-result .result-parent-category a {
+  color: inherit;
+  text-decoration: none;
+}
+#filters #category-filter .filter-options #category-search-results .category-search-result .result-parent-category a:hover {
+  text-decoration: underline;
+}
+
+#filters #category-filter .filter-options #category-search-results .category-search-result .material-icons {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 10px;
+}
+
 #filters #category-filter .filter-options .filter-option {
   display: flex;
 }
 
 #filters #category-filter .filter-options .filter-option .material-icons {
   margin-left: 3px;
+  margin-right: -6px;
   opacity: 0;
   transition: opacity 0.2s;
 }
@@ -113,11 +167,12 @@
   display: none;
   position: absolute;
   width: fit-content;
-  margin-top: -11px;
+  margin-top: -10px;
   margin-left: calc(25% - 13px);
   background-color: #fff;
   border-radius: 7px;
   box-shadow: 0 0 5px 0 #aaa;
+  overflow: hidden;
 }
 #filters #category-filter .filter-options .filter-option:hover .subcategories {
   display: block;
