--- a/public/styles/sell.css
+++ b/public/styles/sell.css
@@ -5,7 +5,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100%;
 }
 
 main {
@@ -20,10 +20,41 @@ h2 {
   font-weight: 500;
 }
 
+input[type="text"] {
+  width: 100%;
+  padding: 10px 11px;
+  font-family: inherit;
+  font-size: 16px;
+  border: 1.5px solid #767676;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+div.select-wrapper {
+  position: relative;
+}
+
+select {
+  width: 100%;
+  padding: 10px 11px;
+  border-radius: 5px;
+  font-family: inherit;
+  font-size: 16px;
+  appearance: none;
+}
+
+select + span.material-icons {
+  position: absolute;
+  top: 50%;
+  transform: translate(calc(-100% - 7px), -50%);
+  pointer-events: none;
+}
+
 #sell-procedure-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1;
   width: 80%;
   height: 100%;
 }
@@ -53,6 +84,7 @@ h2 {
   font-size: 18px;
   font-weight: 500;
   z-index: 2;
+  transition: background-color 0.5s;
 }
 
 .progress-marker.progress-marker-complete {
@@ -92,6 +124,7 @@ h2 {
   display: none;
   /* display: flex; */
   flex-direction: column;
+  flex-grow: 1;
   width: 100%;
   height: 100%;
   /* padding: 30px; */
@@ -100,6 +133,9 @@ h2 {
 
 .sell-procedure-step h1 {
   margin: 0;
+}
+.sell-procedure-step h1:not(:first-of-type) {
+  margin-top: 50px;
 }
 
 #sell-procedure-step-1 {
@@ -116,14 +152,28 @@ h2 {
   flex: 1 0;
 }
 
-.halves-wrapper > .half input[type="text"] {
-  width: 100%;
-  padding: 10px 11px;
-  font-family: inherit;
-  font-size: 16px;
-  border: 1.5px solid #767676;
-  border-radius: 5px;
-  box-sizing: border-box;
+.attach-photos {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  align-items: center;
+  /* margin-top: 10px; */
+  padding: 20px 20px 25px;
+  border: 4px dashed #bbb;
+  border-radius: 10px;
+  user-select: none;
+}
+.attach-photos::after {
+  content: "Double-click to add photos, or drag photos here";
+}
+
+.attach-photos > .material-icons-outlined {
+  margin-bottom: 10px;
+  color: #444;
+  font-size: 60px;
+}
+.attach-photos > .material-icons-outlined::after {
+  content: "add_a_photo";
 }
 
 #listing-category-wrapper {
@@ -142,47 +192,10 @@ input#listing-category {
   flex-grow: 1;
   padding: 0;
   border: none;
+  border-radius: 0;
   outline: none;
   font-family: inherit;
   font-size: 16px;
-}
-
-#attach-photos {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  align-items: center;
-  /* margin-top: 10px; */
-  padding: 20px 20px 25px;
-  border: 5px dashed #bbb;
-  border-radius: 10px;
-  user-select: none;
-}
-
-#attach-photos > .material-icons-outlined {
-  margin-bottom: 10px;
-  color: #444;
-  font-size: 60px;
-}
-
-#condition-select-wrapper {
-  position: relative;
-}
-
-#item-condition {
-  width: 100%;
-  padding: 10px 11px;
-  border-radius: 5px;
-  font-family: inherit;
-  font-size: 16px;
-  appearance: none;
-}
-
-#item-condition + span.material-icons {
-  position: absolute;
-  top: 50%;
-  transform: translate(calc(-100% - 7px), -50%);
-  pointer-events: none;
 }
 
 #price-input-wrapper {
@@ -210,6 +223,68 @@ input#listing-category {
   box-sizing: border-box;
 }
 
+/* .additional-field > h2 {
+  margin-top: 20px;
+} */
+
+#add-field-button {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  padding: 0;
+  width: fit-content;
+  border: none;
+  font-size: 18px;
+  transform: translateX(-2px);
+}
+
+#add-field-button .material-icons {
+  margin-right: 6px;
+  font-size: 28px;
+}
+
+.additional-field {
+  /* position: relative; */
+  margin-bottom: 15px;
+}
+.additional-field:last-of-type {
+  margin-bottom: 5px;
+}
+
+.additional-field > h2 {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0;
+}
+
+.additional-field > h2 > button.remove-field {
+  /* display: none; */
+  margin: 0 0 0 12px;
+  padding: 0;
+  background-color: #00000000;
+  color: var(--theme-red);
+  border: none;
+  font-size: 28px;
+  transform: translateY(1px);
+  /* right: 0; */
+}
+/* .additional-field > h2:hover > button.remove-field {
+  display: block;
+} */
+
+.additional-field h3 {
+  /* margin-top: 0; */
+  font-weight: 500;
+}
+
+.additional-field-text {
+  margin-bottom: 20px;
+}
+
+/* .additional-field > h3 {
+  margin-top: 20px;
+} */
+
 #sell-procedure-navigation-buttons {
   margin-left: auto;
   margin-top: 30px;
@@ -217,16 +292,9 @@ input#listing-category {
 
 #sell-procedure-navigation-buttons > button {
   padding: 5px 20px;
-  border: 1.5px solid var(--theme-red);
   border-radius: 5px;
-  font-family: inherit;
   font-size: 16px;
   font-weight: 500;
-  cursor: pointer;
-}
-#sell-procedure-navigation-buttons > button:not(.primary-button) {
-  background-color: #fff;
-  color: var(--theme-red);
 }
 #sell-procedure-navigation-buttons > button:not(:last-child) {
   margin-right: 7px;
