--- a/public/styles/sell.css
+++ b/public/styles/sell.css
@@ -138,10 +138,6 @@ select + span.material-icons {
   margin-top: 50px;
 }
 
-#sell-procedure-step-1 {
-  display: block;
-}
-
 .halves-wrapper {
   display: flex;
   width: 100%;
@@ -157,6 +153,7 @@ select + span.material-icons {
   flex-direction: column;
   flex-grow: 1;
   align-items: center;
+  justify-content: center;
   /* margin-top: 10px; */
   padding: 20px 20px 25px;
   border: 4px dashed #bbb;
@@ -212,7 +209,7 @@ input#listing-category {
   transform: translate(11px, calc(-50% - 0.5px));
 }
 
-#item-description {
+#listing-description {
   width: 100%;
   flex-grow: 1;
   padding: 10px 11px;
@@ -239,7 +236,7 @@ input#listing-category {
 }
 
 #add-field-button .material-icons {
-  margin-right: 6px;
+  margin-right: 7px;
   font-size: 28px;
 }
 
@@ -284,6 +281,26 @@ input#listing-category {
 /* .additional-field > h3 {
   margin-top: 20px;
 } */
+
+#sell-procedure-step-4 {
+  flex-grow: 0;
+}
+
+#sell-procedure-step-4 h2 {
+  margin-bottom: 5px;
+}
+
+#sell-procedure-step-4 h3 {
+  margin: 20px 0 5px;
+}
+
+#sell-procedure-step-4 h4 {
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+#sell-procedure-step-4 h4:first-of-type {
+  margin-top: 5px;
+}
 
 #sell-procedure-navigation-buttons {
   margin-left: auto;
