--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -73,7 +73,7 @@ button {
   box-shadow: 0 0 10px 0 #aaa;
 }
 
-.profile-picture {
+.profile-picture-small {
   border-radius: 50%;
 }
 
@@ -152,7 +152,7 @@ button {
   color: #666;
 }
 
-.listing .listing-info-top .profile-picture {
+.listing .listing-info-top .profile-picture-small {
   height: 100%;
   margin-right: 10px;
 }
