--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -66,7 +66,15 @@ button {
 .secondary-button {
   background-color: #fff;
   color: var(--theme-red);
-  border: 1.5px solid var(--theme-red);
+  border: 2px solid var(--theme-red);
+  font-weight: 500;
+  transition: box-shadow 0.2s;
+}
+.secondary-button:hover {
+  box-shadow: 0 0 7px 0 #ff26348c;
+}
+.secondary-button:active {
+  background-color: #ff26341d;
 }
 
 .card {
@@ -250,9 +258,4 @@ button {
 }
 .listing .listing-action-buttons .start-chat::before {
   content: "Chat";
-}
-@media screen and (min-width: 431px) and (max-width: 480px) {
-  .listing .listing-action-buttons .start-chat::before {
-    content: "Chat";
-  }
 }
