--- a/public/styles/sell.css
+++ b/public/styles/sell.css
@@ -28,7 +28,7 @@ h2 {
   font-weight: 500;
 }
 
-input[type="text"] {
+input[type="text"], textarea {
   width: 100%;
   padding: 10px 11px;
   font-family: inherit;
@@ -167,9 +167,16 @@ select + span.material-icons {
   border: 4px dashed #bbb;
   border-radius: 10px;
   user-select: none;
+  position: relative;
 }
 .attach-photos::after {
-  content: "Double-click to add photos, or drag photos here";
+  content: "Click to add photos, or drag photos here";
+}
+
+.attach-photos input[type=file] {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
 }
 
 .attach-photos > .material-icons-outlined {
@@ -241,6 +248,8 @@ input#listing-category {
   border: none;
   font-size: 18px;
   transform: translateX(-2px);
+  padding: 10px;
+  border-radius: 5px;
 }
 
 #add-field-button .material-icons {
